--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, repudiandae earum? Quod quis inventore, perferendis quos est rerum ab accusamus sed repellat qui laudantium accusantium possimus odit, incidunt repellendus necessitatibus?
         </article>
     </section>
+    
+    <footer>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt voluptate sapiente, quibusdam tempora laboriosam facilis obcaecati maxime repellat dicta, aut molestias commodi excepturi ad! Accusantium nobis modi suscipit magnam commodi.</footer>
 </body>
 </html>
